# relay

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  install.sh  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  desktop.yml  release-images.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: app.module.ts  config.controller.ts  main.ts  upload.controller.ts  uploads.ts
apps/api/src/auth/: auth.controller.ts  auth.test.ts  auth.ts
apps/api/src/gateway/: signaling.gateway.ts
apps/api/src/sfu/: sfu-health.ts  sfu-token.ts
apps/sfu/: Dockerfile  package.json
apps/sfu/src/: app.module.ts  health.controller.ts  main.ts  token.test.ts  token.ts
apps/sfu/src/gateway/: sfu.gateway.ts
apps/sfu/src/media/: media.config.ts  rooms.service.ts  workers.service.ts
apps/web/: Dockerfile  middleware.ts  next.config.mjs  package.json  postcss.config.mjs  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/login/: page.tsx
apps/web/components/chat/: ChatPanel.tsx  ImageLightbox.tsx  MessageAttachment.tsx
apps/web/components/layout/: AddHostDialog.tsx  AppShell.tsx  AudioUnlock.tsx  Background.tsx  Controls.tsx  CreateChannelDialog.tsx  CreateServerDialog.tsx  IdentityGate.tsx  InviteDialog.tsx  JoinByCodeSheet.tsx  Members.tsx  MobileBar.tsx  OnlineMembers.tsx  ServerRail.tsx  SettingsDialog.tsx  Sidebar.tsx  Topbar.tsx  UnlockServerDialog.tsx  VoiceMembers.tsx
apps/web/lib/: avatar.ts  channels.ts  config.ts  constants.ts  desktop-screen-audio.ts  desktop.test.ts  desktop.ts  format.ts  gradient.ts  hosts.ts  hotkeys.ts  identity.ts  join-code.ts  markdown.tsx  motion.ts  peer-manager.test.ts  sdp.test.ts  sdp.ts  server-visual.ts  servers.ts  sfx.ts  socket.ts  theme.ts  use-sfu.ts  utils.ts  voice-fallback.test.ts  voice.ts
apps/web/public/: screen-audio-worklet.js
apps/web/stores/: audio-unlock.ts  channels.ts  chat.ts  desktop.ts  hosts.ts  hotkeys.ts  servers.ts  ui.ts  unread.ts  voice.ts
clients/: README.md
clients/desktop/: .gitignore  README.md
clients/desktop/src/: index.html  main.js
clients/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json  remote.json
clients/desktop/src-tauri/icons/: README.md  icon.icns
clients/desktop/src-tauri/src/: main.rs  screen_audio.rs  settings.rs
clients/ios/: .gitignore  README.md  project.yml
docs/: architecture.md  backend.md  frontend.md  protocol.md  sfu-plan.md
e2e/: package.json  playwright.config.ts
e2e/fixtures/: sample.txt
e2e/tests/: smoke.spec.ts
infra/: Caddyfile  Caddyfile.e2e  docker-compose.dev.yml  docker-compose.e2e.yml
tools/: gen-sfx.py
(+38 files in other folders)
