[package]
name = "relay-desktop"
version = "0.4.0"
description = "relay desktop — Tauri v2 оболочка над web-клиентом"
authors = ["relay"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
# Одно окно на инсталляцию: второй запуск фокусирует существующее.
tauri-plugin-single-instance = "2"
# Глобальный push-to-talk / mute-хоткей вне фокуса окна.
tauri-plugin-global-shortcut = "2"
# Нативные уведомления (упоминания, входящий звонок).
tauri-plugin-notification = "2"
# Нативный диалог «Обновить? Да/Позже» — стартовая проверка апдейтов идёт из
# Rust и спрашивает пользователя нативно, без зависимости от web→Rust моста.
tauri-plugin-dialog = "2"
# Автостарт при входе в систему.
tauri-plugin-autostart = "2"
# Автообновление: проверка/загрузка/установка подписанных релизов с GitHub.
# Работает из Rust (см. main.rs) — удалённому web-UI JS-API апдейтера НЕ даём.
tauri-plugin-updater = "2"
# Разбор payload'ов событий из web-UI (voice-status / set-ptt-shortcut).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tokio::time::timeout — жёсткий предохранитель вокруг updater.check() (см. main.rs).
tokio = { version = "1", features = ["time"] }
# PCM-кадры нативного звука демонстрации → base64 в события Tauri.
base64 = "0.22"
ctor = "0.8.0"

# Версия системного WebKitGTK в рантайме (webkit_get_*_version) — решаем,
# нужен ли WEBKIT_DISABLE_DMABUF_RENDERER (см. main()). Крейт уже в дереве
# зависимостей через wry, прямая ссылка ничего не тянет.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk-sys = "2.0"
# Обработчик permission-request и настройки WebKit (enable-webrtc): wry на
# webkitgtk НЕ разрешает медиа-запросы — делаем сами в setup() (см. main.rs).
# Фича v2_38 — та же, с которой крейт уже собирается внутри wry.
webkit2gtk = { version = "2.0", features = ["v2_38"] }

# Нативный захват звука экрана (process-loopback exclude) — только Windows.
# WASAPI + COM через windows-rs. На macOS/Linux screen_audio компилируется в
# заглушку (см. cfg в src/screen_audio.rs), поэтому этот блок здесь безопасен.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Security",        # CreateEventW/SECURITY_ATTRIBUTES гейтятся этой фичей
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp", # снимок процессов → PID браузера WebView2
] }
# Макрос #[implement] раскрывается в пути `windows_core::…` — нужен как прямой крейт.
windows-core = "0.58"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
